--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,5 +12,13 @@
   "dependencies": {
     "express": "^5.1.0",
     "multer": "^2.0.1"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.2",
+    "@types/multer": "^1.4.12",
+    "@types/node": "^22.15.29",
+    "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 }
