--- a/feeds_app/pubspec.yaml
+++ b/feeds_app/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   transparent_image: ^2.0.1
   flutter_bloc: ^9.1.1
   dartz: ^0.10.1
+  http: ^1.4.0
 
 dev_dependencies:
   flutter_test:
