--- a/feeds_app/pubspec.yaml
+++ b/feeds_app/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_bloc: ^9.1.1
   dartz: ^0.10.1
   http: ^1.4.0
+  image_picker: ^1.1.2
+  cross_file: ^0.3.4+2
 
 dev_dependencies:
   flutter_test:
