--- a/feeds_app/pubspec.yaml
+++ b/feeds_app/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   http: ^1.4.0
   image_picker: ^1.1.2
   cross_file: ^0.3.4+2
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
